# actdyn

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: can_lowdim.yaml  can_lowdim_te_only.yaml  lift_bc_mlp.yaml  lift_bet_style.yaml  lift_knn_bc.yaml  lift_lowdim.yaml  lift_lowdim_learned.yaml  lift_lowdim_strong.yaml  lift_lowdim_strong_te_only.yaml  square_lowdim.yaml  square_lowdim_te_only.yaml
docs/: README.md  final_experiment_plan.md  upstream_baselines.md
latex/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  presentation.aux  presentation.bbl  presentation.blg  presentation.fdb_latexmk  presentation.fls  presentation.nav  presentation.out  presentation.tex  presentation.toc  refs.bib
runs/actdyn_can_learned/eval/: rollout_summary.json
runs/actdyn_can_learned/eval/dynamic/: summary.json
runs/actdyn_can_learned/eval/full_chunk/: summary.json
runs/actdyn_can_learned/eval/learned_commit/: summary.json
runs/actdyn_can_learned/eval/receding_horizon/: summary.json
runs/actdyn_can_strong/eval/: rollout_summary.json
runs/actdyn_can_strong/eval/receding_horizon/: summary.json
runs/actdyn_can_strong/eval_ablations/sampled_latent_default_modes/: rollout_summary.json
runs/actdyn_can_strong/eval_ablations/z0_default_modes/: rollout_summary.json
runs/actdyn_lift/: epoch_metrics.jsonl  metrics.jsonl  resolved_config.yaml
runs/actdyn_lift/eval/: offline_metrics.json  rollout_summary.json
runs/actdyn_lift/eval/dynamic/: commit_events.csv  episode_metrics.csv  step_records.csv  summary.json
runs/actdyn_lift/eval/full_chunk/: commit_events.csv  episode_metrics.csv  step_records.csv  summary.json
runs/actdyn_lift/eval/receding_horizon/: summary.json  (+3 more)
runs/actdyn_lift/tensorboard/: events.out.tfevents.1774133981.GENERIS.12476.0  events.out.tfevents.1774488997.Zuhayr.10663.0
runs/actdyn_lift_learned/eval/: rollout_summary.json
runs/actdyn_square_learned/eval/: rollout_summary.json
runs/can_bc_mlp/eval/: rollout_summary.json
runs/can_bet_style/eval/: rollout_summary.json
runs/can_knn_bc/eval/: rollout_summary.json
runs/can_lowdim_seed0/eval/: rollout_summary.json
runs/can_lowdim_seed1/eval/: rollout_summary.json
runs/can_lowdim_seed2/eval/: rollout_summary.json
runs/lift_bc_mlp/eval/: rollout_summary.json
runs/lift_bet_style/eval/: rollout_summary.json
runs/lift_knn_bc/eval/: rollout_summary.json
runs/lift_lowdim_strong_seed0/eval/: rollout_summary.json
runs/lift_lowdim_strong_seed1/eval/: rollout_summary.json
runs/lift_lowdim_strong_seed2/eval/: rollout_summary.json
runs/square_bc_mlp/eval/: rollout_summary.json
runs/square_bet_style/eval/: rollout_summary.json
runs/square_knn_bc/eval/: rollout_summary.json
runs/square_lowdim_seed0/eval/: rollout_summary.json
runs/square_lowdim_seed1/eval/: rollout_summary.json
runs/square_lowdim_seed2/eval/: rollout_summary.json
scripts/: eval_can_matrix.sh  eval_learned_commit.sh  eval_lift_strong_matrix.sh  eval_square_matrix.sh  run_all_baselines.sh  run_can_square_full_parity.sh  run_missing_baseline_evals.sh  train_seeds.sh
src/actdyn/: builders.py  config.py  eval.py  inspect_dataset.py  train.py
src/actdyn/baselines/: __init__.py
src/actdyn/data/: robomimic_lowdim.py
src/actdyn/envs/: robomimic_env.py
src/actdyn/execution/: executor.py  heuristics.py
src/actdyn/models/: act_cvae.py  bc_mlp.py  bet_style.py  knn_bc.py
src/actdyn/utils/: action_kmeans.py  checkpoint.py  logging.py  misc.py
(+82 files in other folders)
