[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "actdyn-prototype"
version = "0.1.0"
description = "CSC415 project: ACT-style chunk policies with inference-time adaptive execution on RoboMimic low-dim Lift, Can, and Square."
readme = "docs/README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [
  { name = "Zuhayr Ahmed" },
  { name = "Charles Cheung" },
  { name = "Lawrence Fu" },
]
dependencies = [
    "torch>=2.7",
    # Must come from the same PyTorch wheel index as torch; PyPI torchvision often mismatches and breaks robomimic import (nms operator).
    "torchvision>=0.20.0",
    "numpy>=2.1",
  "h5py>=3.12",
  "PyYAML>=6.0.2",
  "tensorboard>=2.18",
  "tqdm>=4.67",
  "matplotlib>=3.10",
]

[project.optional-dependencies]
# PyPI robomimic==0.3.0 imports mujoco_py unconditionally. v0.4+ makes mujoco_py optional so
# robosuite>=1.4 can use DeepMind `mujoco` only. Pin v0.4 (not master/v0.5) to avoid heavy
# transformers/tokenizers deps that break under Python 3.14 uv builds.
rollout = [
  "robomimic",
  "robosuite>=1.4,<1.6",
]

[project.scripts]
actdyn-train = "actdyn.train:main"
actdyn-eval = "actdyn.eval:main"
actdyn-inspect = "actdyn.inspect_dataset:main"

[tool.hatch.build.targets.wheel]
packages = ["src/actdyn"]

[tool.uv]
package = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]
robomimic = { git = "https://github.com/ARISE-Initiative/robomimic.git", rev = "7c66e7a41b5d9dcc905b1a68346bfee1b49b79c9" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
